--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "express": "^4.16.4",
+    "fluent-ffmpeg": "^2.1.2",
     "uuid": "^3.3.2"
   }
 }
